--- a/css/products.css
+++ b/css/products.css
@@ -57,6 +57,8 @@
     width: fit-content;
     background-color: var(--fifth-brand-color);
     border-radius: 1rem;
+
+    /* min-height: 100%; */
 }
 
 .product__img-box {
