--- a/css/hero.css
+++ b/css/hero.css
@@ -1,6 +1,7 @@
 .hero__wrapper-main {
     background-color: var(--second-brand-color);
     border-radius: 0 0 5rem 5rem;
+    overflow: hidden;
 }
 .hero {
     padding: 25rem 0 20rem;
@@ -8,6 +9,9 @@
 }
 .hero .title {
     margin-bottom: 3rem;
+    color: var(--sub-text-color);
+}
+.hero .text {
     color: var(--sub-text-color);
 }
 .hero .title span {
@@ -84,6 +88,31 @@
 
 
 @media screen and (min-width: 1440px)  {
+    .hero__wrapper-main {
+        padding-bottom: 3rem;
+    }
+    .hero {
+        background-image: url('../img/bg2.jpeg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        border-radius: 5rem;
+        position: relative;
+        overflow: hidden;
+    }
+    .hero::before {
+        position: absolute;
+        display: block;
+        content: '';
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, .5);
+        top: 0;
+        left: 0;
+    }
+    .hero .title, .hero .text {
+        position: relative;
+    }
 
     .policy__btn:hover {
         color: var(--second-brand-color);
